fixed famous zooming jank from offscreen elements on mobile browsers

--- a/src/app/views/scss/app.scss
+++ b/src/app/views/scss/app.scss
@@ -43,3 +43,7 @@ button {
   background-position: center;
   margin-top: 40px;
 }
+
+.famous-container {
+  overflow: hidden !important;
+}
